--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -122,12 +122,12 @@ table{
 
 thead tr th{
     background: #f8f8f8;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 td,th{
-  padding: 10px;
+  padding: 0 10px;
   text-align: center;
   text-align: left;
 }
